--- a/style.css
+++ b/style.css
@@ -51,3 +51,140 @@ p {
 body {
   width: 100%;
 }
+
+
+/* header design */
+
+#header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 80px;
+  background-color: #E3E6F3;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+  z-index: 999;
+  position: sticky;
+  top: 0;
+  left: 0;
+}
+
+#navbar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#navbar li{
+  list-style: none;
+  padding: 0 20px;
+  position: relative;
+}
+
+#navbar li a{
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 600;
+  color: #1a1a1a;
+  transition: 0.3s ease;
+}
+
+#navbar li a:hover,
+#navbar li a.active{
+  color: rgb(154, 139, 139);
+}
+
+#navbar li a.active::after,
+#navbar li a:hover::after{
+  content: "";
+  width: 30%;
+  height: 2px;
+  background-color: rgb(154, 139, 139);
+  position: absolute;
+  bottom: -4px;
+  left: 20px;
+}
+
+/* homepage design */
+
+#centr{
+  background-image: url("img/backgroundImg1.png");
+  height: 90vh;
+  width: 100%;
+  background-position: top 25% right 0;
+  padding: 0 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+#centr h4{
+  padding-bottom: 15px;
+}
+
+#centr h1{
+  color: rgb(154, 139, 139);;
+}
+
+#centr button{
+  background-image: url("img/button.png");
+  background-color: transparent;
+  color: #088178;
+  border: 0;
+  padding: 14px 80px 14px 65px;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  font-weight: 700px;
+  font-size: 15px;
+}
+
+#services{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+#services .fe-box{
+  width: 180px;
+  text-align: center;
+  padding: 25px 15px;
+  box-shadow: 20px 20px 34px rgba(0, 0, 0,0.03);
+  border: 1px solid #cce7d0;
+  border-radius: 4px;
+  margin: 15px 0;
+}
+
+#services .fe-box img{
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+#services .fe-box:hover{
+  box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1)
+}
+
+#services .fe-box h6{
+  display: inline-block;
+  padding: 9px 8px 6px 8px;
+  line-height: 1;
+  border-radius: 4px;
+  color: #131515;
+  background-color: rgb(151, 152, 152);
+}
+
+#services .fe-box:nth-child(2) h6{
+  background-color: rgb(108, 157, 179);
+}
+#services .fe-box:nth-child(3) h6{
+  background-color: rgb(248, 191, 77);
+}
+#services .fe-box:nth-child(4) h6{
+  background-color: rgb(247, 93, 51);
+}
+#services .fe-box:nth-child(5) h6{
+  background-color: rgb(200, 128, 2);
+}
+#services .fe-box:nth-child(6) h6{
+  background-color: #1fbc00;;
+}
