--- a/style.css
+++ b/style.css
@@ -524,6 +524,104 @@ footer .copyright{
   text-align: center;
 }
 
+/* Shop page Styling */
+#shop-header{
+  background-image: url(img/banner/b1.jpg);
+  width: 100%;
+  height: 40vh;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  padding: 14px;
+}
+
+#shop-header h2, #shop-header p{
+  color: #fff;
+}
+
+#pagination{
+  text-align: center;
+}
+
+#pagination a {
+  text-decoration: none;
+  padding: 15px 20px;
+  border-radius: 4px;
+  color: #fff;
+  background-color: #088178;
+  font-weight: 600;
+}
+
+#pagination a i{
+  font-size: 16px;
+  font-weight: 600;
+}
+
+
+
+/* detailed product page styling */
+#product-details{
+  display: flex;
+  margin-top: 20px;
+}
+
+#product-details .single-product-image{
+  width: 40%;
+  margin-right: 50px;
+}
+
+.small-product-img{
+  display: flex;
+  justify-content: space-between;
+}
+
+.small-img-col{
+  flex-basis: 24%;
+  cursor: pointer;
+}
+
+#product-details .single-product-details{
+  width: 50%;
+  padding-top: 30px;
+}
+
+#product-details .single-product-details h4{
+  padding: 40px 0 20px 0;
+}
+
+#product-details .single-product-details h2{
+  font-size: 25px;
+}
+
+#product-details .single-product-details select{
+  display: block;
+  padding: 5px 10px;
+  margin-bottom: 10px;
+}
+
+#product-details .single-product-details input{
+  width: 50px;
+  height: 47px;
+  padding-left: 10px;
+  font-size: 16px;
+  margin-right: 10px;
+}
+
+#product-details .single-product-details input:focus{
+  outline: none;
+}
+
+#product-details .single-product-details button{
+  background-color: #000;
+  color: #fff;
+}
+
+#product-details .single-product-details span{
+  line-height: 25px;
+}
+
 
 
 /* Media Query */
@@ -689,6 +787,21 @@ font-size: 24px;
 
 footer .copyright {
   text-align: start;
+}
+
+/* detailed product page */
+
+#product-details {
+  display: flex;
+  flex-direction: column;
+}
+
+#product-details .single-product-image {
+  width: 100%;
+}
+
+#product-details .single-product-details {
+  width: 100%;
 }
 
 }
