responsive blog ui

--- a/style.css
+++ b/style.css
@@ -525,7 +525,7 @@ footer .copyright{
 }
 
 /* Shop page Styling */
-#shop-header{
+#page-header{
   background-image: url(img/banner/b1.jpg);
   width: 100%;
   height: 40vh;
@@ -537,7 +537,7 @@ footer .copyright{
   padding: 14px;
 }
 
-#shop-header h2, #shop-header p{
+#page-header h2, #page-header p{
   color: #fff;
 }
 
@@ -621,6 +621,81 @@ footer .copyright{
 #product-details .single-product-details span{
   line-height: 25px;
 }
+
+
+/* Blog Page Styling */
+
+#page-header.blog-header{
+  background-image: url("img/banner/b19.jpg");
+}
+
+#blog{
+  padding: 150px 150px 0 150px;
+}
+
+#blog .blog-box{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  position: relative;
+  padding-bottom: 90px;
+}
+
+#blog .blog-img{
+  width: 50%;
+  margin-right: 40px;
+}
+
+#blog img{
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+#blog .blog-text{
+  width: 50%;
+}
+
+#blog .blog-text a{
+  text-decoration: none;
+  font-size: 11px;
+  color: #000;
+  font-weight: 700;
+  position: relative;
+  transition: 0.3s;
+}
+
+#blog .blog-text a::after{
+  content: "";
+  width: 50px;
+  height: 1px;
+  background-color: #000;
+  position: absolute;
+  top: 4px;
+  right: -60px;
+}
+#blog .blog-text a:hover{
+  color: rgb(154, 139, 139);
+}
+
+#blog .blog-text a:hover::after{
+  background-color: rgb(154, 139, 139);
+}
+
+#blog .blog-box h1{
+  position: absolute;
+  top: -40px;
+  left: 0;
+  font-size: 70px;
+  font-weight: 700;
+  color: #c9cbce;
+  z-index: -9;
+}
+
+
+
+
+
 
 
 
@@ -801,6 +876,28 @@ footer .copyright {
 }
 
 #product-details .single-product-details {
+  width: 100%;
+}
+
+/* blog section */
+
+#blog .blog-box {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+#blog {
+  padding: 100px 20px 0 20px;
+}
+
+#blog .blog-img {
+  width: 100%;
+  margin-right: 0;
+  margin-bottom: 30px;
+}
+
+#blog .blog-text {
   width: 100%;
 }
 
