--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ button.white {
 }
 
 #product1 .pro img {
-  width: 100%;
+  height: 100px;
   border-radius: 20px;
 }
 
@@ -270,7 +270,7 @@ button.white {
   font-size: 14px;
 }
 
-#product1 .pro .des i {
+#product1 .pro .des .star {
   font-size: 12px;
   color: rgb(243, 181, 25);
 }
@@ -282,19 +282,27 @@ button.white {
   color: #088178;
 }
 
-#product1 .pro .cart {
+ .cart {
   width: 40px;
   height: 40px;
   line-height: 40px;
   border-radius: 50px;
+  padding-left: 9px;
   background-color: #e8f6ea;
   font-weight: 500;
   color: #088178;
   border: 1px solid #cce7d0;
   position: absolute;
-  bottom: 20px;
+/*   bottom: 20px; */
   right: 10px;
 }
+
+.star-price-cart{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 #banner {
   display: flex;
   flex-direction: column;
@@ -1040,6 +1048,11 @@ font-size: 24px;
   height: 30vh;
   padding: 30px;
 }
+.cart {
+  bottom: 20px;
+  right: 10px;
+  padding-right: 9px;
+}
 
 #banner3 {
   padding: 0 40px;
@@ -1228,6 +1241,12 @@ footer .copyright {
 #sub-total {
   width: 100%;
   padding: 20px;
+}
+
+.cart {
+  bottom: 20px;
+  right: 10px;
+  padding-right: 9px;
 }
 
 }
