--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ button.white {
 #navbar {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space;
 }
 
 #navbar li {
@@ -1007,11 +1007,11 @@ footer .copyright{
 
 #close{
   display: initial;
-position: absolute; 
-top: 30px;
-left: 30px;
-color: #222;
-font-size: 24px;
+  position: absolute; 
+  top: 30px;
+  left: 30px;
+  color: #222;
+  font-size: 24px;
 }
 #lg-bag{
   display: none;
